feat:程序异常情况 以及 恶意代码处理(未完成)